# SenderReciever

./: CMakeLists.txt  circular_buffer.cpp  circular_buffer.h  errors.h  reciever.cpp  reciever.h  sender.cpp  sender.h
libs/: aux_functions.h  circular_buffer.h
tests/: CMakeLists.txt
tests/CircularBuffer/: CMakeLists.txt  main.cpp
